@@ -306,7 +306,8 @@ public class ParsingFieldUpdateProcessorsTest extends UpdateProcessorTestBase {
   }
 
   public void testParseIntNonRootLocale() throws Exception {
-    final DecimalFormatSymbols ru_RU = DecimalFormatSymbols.getInstance(new Locale("ru", "RU"));
+    final DecimalFormatSymbols ru_RU =
+        DecimalFormatSymbols.getInstance(new Locale.Builder().setLanguageTag("ru-RU").build());
     final char groupChar = ru_RU.getGroupingSeparator();
 
     int value = 1089883491;
@@ -421,7 +422,8 @@ public class ParsingFieldUpdateProcessorsTest extends UpdateProcessorTestBase {
   }
 
   public void testParseLongNonRootLocale() throws Exception {
-    final DecimalFormatSymbols ru_RU = DecimalFormatSymbols.getInstance(new Locale("ru", "RU"));
+    final DecimalFormatSymbols ru_RU =
+        DecimalFormatSymbols.getInstance(new Locale.Builder().setLanguageTag("ru-RU").build());
     final char groupChar = ru_RU.getGroupingSeparator();
 
     long value = 1089883491L;
@@ -518,7 +520,8 @@ public class ParsingFieldUpdateProcessorsTest extends UpdateProcessorTestBase {
   }
 
   public void testParseFloatNonRootLocale() throws Exception {
-    final DecimalFormatSymbols fr_FR = DecimalFormatSymbols.getInstance(new Locale("fr", "FR"));
+    final DecimalFormatSymbols fr_FR =
+        DecimalFormatSymbols.getInstance(new Locale.Builder().setLanguageTag("fr-FR").build());
     final char groupChar = fr_FR.getGroupingSeparator();
     final char decimalChar = fr_FR.getDecimalSeparator();
 
@@ -636,7 +639,8 @@ public class ParsingFieldUpdateProcessorsTest extends UpdateProcessorTestBase {
   }
 
   public void testParseDoubleNonRootLocale() throws Exception {
-    final DecimalFormatSymbols fr_FR = DecimalFormatSymbols.getInstance(new Locale("fr", "FR"));
+    final DecimalFormatSymbols fr_FR =
+        DecimalFormatSymbols.getInstance(new Locale.Builder().setLanguageTag("fr-FR").build());
     final char groupChar = fr_FR.getGroupingSeparator();
     final char decimalChar = fr_FR.getDecimalSeparator();
 
